# autolingua

./: .gitignore  .readthedocs.yaml  .~lock.PRESEEA_1995_Nivel_bajo.xlsx#  README.md  codification.py  codification2.py  pyproject.toml  replacement.py  requirements.txt  setup.py
.github/workflows/: python_publish.yml
autolingua/notebooks/: clustering.ipynb  graphs.ipynb
autolingua/scripts/: cli.py  codification.py  replacement.py
autolingua/utils/: utils.py
data/: agg_analysis.csv
docs/source/: conf.py
notebooks/: calculos.ipynb  calcultate_table.ipynb  copyandpaste.ipynb  graphs.ipynb
