[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'autolingua'
version = '0.3.2'
authors = [
    {name='Álvaro Ramajo-Ballester', email='aramajo@ing.uc3m.es'},
]
description = 'autolingua description'
readme = 'README.md'
# requires-python = '>=3.8,<3.10'
requires-python = '>=3.8'
classifiers = [
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'License :: OSI Approved :: GNU Affero General Public License v3',
    'Natural Language :: English',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
]

keywords = [
    'python',
]


dependencies = [
    'verbecc',
    'pandas',
    'numpy',
    'openpyxl',
    'argparse',
    'ipykernel',
    'ipywidgets',
    'matplotlib',
    'seaborn',
]

[project.optional-dependencies]
dev = [
    'ipykernel',
    'ipywidgets',
    'twine',
    'build',
    'bump-my-version',
]
docs = [
    'sphinx==7.1.2',
    'sphinx_rtd_theme==1.3.0',
    'sphinx-copybutton==0.5.1',
    'sphinx-markdown-tables==0.0.17',
    'sphinx-tabs',
    'numpydoc==1.5.0',
    'myst-parser==2.0.0',
]
full = ['autolingua[dev,docs]']


[tool.setuptools.packages]
find = {namespaces = false, exclude = ['docs']}

[project.scripts]
autolingua = "autolingua.scripts.cli:main"

[tool.bumpversion]
current_version = "0.3.2"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "docs/source/conf.py"

[tool.ruff]
line-length = 79
# extend-select = ['Q']
extend-select = ['W505']
ignore = ['F401']

[tool.ruff.format]
# Prefer single quotes over double quotes.
quote-style = 'single'

[tool.ruff.lint.pycodestyle]
max-doc-length = 79
max-line-length = 79


[project.urls]
'Homepage' = 'https://github.com/ramajoballester/autolingua'
'Bug Tracker' = 'https://github.com/ramajoballester/autolingua/issues'